--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Nodeknit</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -14,6 +14,10 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <script type="text/javascript" charset="utf-8" src="js/noteknit.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/jquery-1.8.2.min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/underscore-min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/backbone-min.js"></script>
         <!-- <script src="js/vendor/modernizr-2.6.2.min.js"></script> -->
     </head>
     <body>
