--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Nodeknit</title>
+        <title>Noteknit</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -15,10 +15,10 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script type="text/javascript" charset="utf-8" src="js/jquery-1.8.2.min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="js/jquery-ui-1.9.1.custom.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/underscore-min.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/backbone-min.js"></script>
         <script type="text/javascript" charset="utf-8" src="js/noteknit.js"></script>
-        <!-- <script src="js/vendor/modernizr-2.6.2.min.js"></script> -->
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -26,8 +26,21 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-
+        <div id="notebox">
+          <div id="mover"></div>
+          <h2 class="note">P</h2>
+        </div>
+        <div class="dest">
+        </div>
+        <div class="dest">
+        </div>
+        <div class="dest">
+        </div>
+        <div class="dest">
+        </div>
+        <div class="dest">
+        </div>
+       
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
