--- a/static/index.html
+++ b/static/index.html
@@ -21,10 +21,7 @@
         <script type="text/javascript" charset="utf-8" src="js/noteknit.js"></script>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-
+        <p>Drag &amp; drop notes to lines. Doubleclick to remove.</p>
         <!-- Add your site or application content here -->
         <div id="notebox">
           <div id="mover"></div>
