outpu some cool data

--- a/static/index.html
+++ b/static/index.html
@@ -37,6 +37,8 @@
         </div>
         <div class="dest">
         </div>
+
+        <div id="output"></div>
        
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
