--- a/static/index.html
+++ b/static/index.html
@@ -21,12 +21,18 @@
         <script type="text/javascript" charset="utf-8" src="js/noteknit.js"></script>
     </head>
     <body>
+        <input type="button" id="knit-button" value="Knit!" />
+        <div id="knit">
+          <canvas width="200" height="200"></canvas>
+        </div>
         <p>Drag &amp; drop notes to lines. Doubleclick to remove.</p>
         <!-- Add your site or application content here -->
         <div id="notebox">
           <div id="mover"></div>
           <h2 class="note">P</h2>
         </div>
+        <div id="dest">
+        
         <div class="dest">
         </div>
         <div class="dest">
@@ -36,6 +42,8 @@
         <div class="dest">
         </div>
         <div class="dest">
+        </div>
+
         </div>
 
         <div id="output"></div>
