add a new note!

--- a/static/index.html
+++ b/static/index.html
@@ -24,14 +24,15 @@
     <body>
       <div class="container_12">
         <div class="grid_12">
-          <h1>NoteKnit!</h1>
-          <p>Drag &amp; drop notes to lines. Doubleclick to remove.</p>
+          <h1 class="orange">NoteKnit!</h1>
+          <p>Drag &amp; drop notes to lines. Doubleclick to remove. Click "Knit!" to draw some notes.</p>
         </div>
         <div class="clear"></div>
         <div class="grid_3">
           <div id="notebox">
             <div id="mover"></div>
             <h2 class="note">P</h2>
+            <h2 class="note">Ь</h2>
           </div>
           <input type="button" id="knit-button" value="Knit!" />
           <div id="output"></div>
