add (even) more notes

--- a/static/index.html
+++ b/static/index.html
@@ -33,8 +33,14 @@
             <div id="mover"></div>
             <h2 class="note">P</h2>
             <h2 class="note">Ь</h2>
+            <h2 class="note">П</h2>
+            <h2 class="note">Ш</h2>
+            <h2 class="note">o</h2>
+
           </div>
           <input type="button" id="knit-button" value="Knit!" />
+          <input type="button" id="save-button" value="Save this badboy!" />
+          <input type="text" id="song-name" placeholder="Name of the song" />
           <div id="output"></div>
         </div>
         <div class="grid_9" id="maincontain">
