beta playback. breaks and burns.

--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,7 @@
               <h4>Drag & drop</h4>
               <div id="notebox">
               <div id="mover"></div>
+              <div class="note"><img src="img/images.png" ></div>
               <h2 class="note">P</h2>
               <h2 class="note">Ь</h2>
               <h2 class="note">П</h2>
@@ -70,6 +71,8 @@
   
           </div>
         </div>
+      </div>
+      <div id="noteblock">
       </div>
        
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
