--- a/static/index.html
+++ b/static/index.html
@@ -33,12 +33,7 @@
               <h4>Drag & drop</h4>
               <div id="notebox">
               <div id="mover"></div>
-              <div class="note"><img src="img/images.png" ></div>
-              <h2 class="note">P</h2>
-              <h2 class="note">Ь</h2>
-              <h2 class="note">П</h2>
-              <h2 class="note">Ш</h2>
-              <h2 class="note">o</h2>
+              <div class="note"><img src="img/1.png" ></div>
               </div>
             </div>
             <div class="type_box">
@@ -49,7 +44,6 @@
             <h4>Parse from Nokia</h4>
               <textarea id="textarea" placeholder="write some notes here!"></textarea>
               <input type="button" id="textarea-button" value="parse this song">
-              <input type="button" id="knit-button" value="Knit!" />
             </div> 
         </div>
         <div class="grid_9" id="maincontain">
