Maybe fixes touchscreen stuff

--- a/static/index.html
+++ b/static/index.html
@@ -88,7 +88,7 @@
     //variables
     var gestureClassifier = null;
     var notationImages = new Object();
-    var isIphone = navigator.userAgent.indexOf('iPhone') >= 0 || navigator.userAgent.indexOf('iPad') >= 0;
+    var isIphone = navigator.userAgent.indexOf('iPhone') >= 0 || navigator.userAgent.indexOf('iPad') >= 0 || navigator.userAgent.indexOf("android") >=0;
     var gestureClassifier = null;
     var staffSize = 128;
     var advancedOptionsShown = false;
