push notes from nokia boxx

--- a/static/index.html
+++ b/static/index.html
@@ -138,7 +138,7 @@
     </script>
 
     </head>
-    <body onload="handleOnLoad();">
+    <body>
       <div class="container_12">
         <div class="grid_12">
           <h1 class="orange">NoteKnit!</h1>
@@ -150,7 +150,10 @@
               <h4>Drag & drop</h4>
               <div id="notebox">
               <div id="mover"></div>
-              <div class="note"><img src="img/1.png" ></div>
+              <div class="note k1"><img src="img/1.png" ></div>
+              <div class="note k2"><img src="img/n2.png" ></div>
+              <div class="note k3"><img src="img/n3.png" ></div>
+              <div class="note k4"><img src="img/n4.png" ></div>
               </div>
             </div>
             <div class="type_box">
@@ -164,11 +167,6 @@
             </div> 
         </div>
         <div class="grid_9" id="maincontain">
-          <div id="knit">
-            <canvas id="canvasView" width="1000" height="392"></canvas>
-            <canvas id="canvas1" width="300" height="340"></canvas>
-            <canvas id="canvas2" width="300" height="340"></canvas>
-          </div>
           <div class="dest-cont">
           
           <div class="dest">
